# classic-db-tools

./: README.md  _setup.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
_tests/: test_real_database.py
becnhes/: README.md  classic_sql_tools.py  conftest.py  on_sqlalchemy.py
sources/classic/db_tools/: __init__.py  engine.py  mapper.py  params_styles.py  pool.py  poolvalidators.py  result.py  scoped_connection.py  transaction.py  types.py
sources/classic/db_tools/dynamic/: __init__.py  factory.py  query.py  renderer.py
sources/classic/db_tools/mapping/: __init__.py  compiler.py  context.py  find_root.py  params.py  render.py  renderer.py  types.py
sources/classic/db_tools/static/: __init__.py  factory.py  query.py
sources/classic/db_tools/templates/: __init__.py
sources/classic/sql_tools/: __init__.py  engine.py  mapper.py  module.py  params_styles.py  psycopg.py  query.py  result.py  template_renderer.py  tmp.py  types.py
sources/classic/sql_tools/mapper_templates/: one_to_many_template.j2  returning_template.j2  to_dict_template.j2
sources/classic/sql_tools/templates/: extension.py  renderer.py
specs/: tmp.py  tmp_ast.py
tests/: _test_time.py  becnh.py  bench.py  conftest.py  dto.py  test_composite_keys.py  test_connection_pool.py  test_custom_cursor.py  test_engine.py  test_example.py  test_in_transaction.py  test_jinjasql.py  test_mapper_cache.py  test_mapper_sources.py  test_mapping.py  test_mapping_dict.py  test_mapping_obj.py  test_module.py  test_queries_cache.py  test_query.py  test_result.py  test_scoped_connection.py  test_sql.py  test_transactions.py
tests/sql/: test_render.sql
tests/sql/example/: count.sql  count_by_status.sql  count_by_status.sql.tmpl  ddl.sql  find_by_name.sql  find_by_name.sql.tmpl  get_all.sql  get_by_id.sql  joined_get_by_status.sql  joined_get_by_status.sql.tmpl  save.sql  save_task.sql  save_task_statuses.sql  sum_tasks.sql  sum_tasks.sql.tmpl
tests/sql/tasks/: count_by_status.sql  ddl.sql  find_by_name.sql  get_by_id.sql  insert_many.sql  joined_get_by_status.sql  save.sql  sum_tasks.sql
