[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'classic-sql-tools'
version = '0.4.2'
license = 'MIT'
readme = 'README.md'
keywords = ['Jinja2', 'SQL', 'Python', 'Template']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
]
requires-python = '>=3.10'
dependencies = [
    'Jinja2~=3.1',
]
[project.optional-dependencies]
dev = [
    'pytest==6.2.5',
    'psycopg==3.2.1',
    'sqlfluff==3.4.0',
]
[tool.setuptools.packages.find]
where = ['sources']
namespaces = true

#====SQL====

[tool.sqlfluff.core]
dialect = "postgres"
fix_even_unparsable = true
ignore = "templating"

[tool.sqlfluff.indentation]
tab_space_size = 4

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"
