[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel"
]
build-backend = 'setuptools.build_meta'

[project]
name = 'classic-db-tools'
version = '0.0.3'
authors = [
    {name = "Sergey Variasov", email = "variasov@gmail.com"},
]
description = 'Classic DB tools'
readme = 'README.md'
license = 'MIT'
keywords = ['Jinja2', 'SQL', 'Python', 'Template']
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
]
requires-python = '>=3.10'
dependencies = [
    'classic-components~=1.3',
    'Jinja2~=3.1',
]

[project.urls]
Homepage = "https://github.com/variasov/classic-db-tools"

[project.optional-dependencies]
dev = [
    'pytest==6.2.5',
    'psycopg==3.2.1',
    'sqlfluff==3.4.0',
]

[tool.setuptools.packages.find]
where = ['sources']
namespaces = true

#====SQL====

[tool.sqlfluff.core]
dialect = "postgres"
fix_even_unparsable = true
ignore = "templating"

[tool.sqlfluff.indentation]
tab_space_size = 4

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"
